# unparanoid

./: .gitmodules  CMakeLists.txt  Dockerfile  enter.sh  hello.c  libupd.h  valgrind.supp
.github/workflows/: build.yml
driver/: CMakeLists.txt
driver/graphics/: CMakeLists.txt  common.h  gl3.h  gl3_buf.c  gl3_dev.c  gl3_enum.h  gl3_glsl.c  gl3_pl.h  gl3_pl_def.c  gl3_pl_lk.c  gl3_tex.c  gl3_view.c  gl3_view.fsh  gl3_view.vsh  glfw.h  glfw_dev.c  main.c
driver/http/: http.c  upd.yml
driver/luajit/: CMakeLists.txt  common.h  ctx.c  ctx_req.h  dev.c  prog.c  std.c  std.lua  stream.c  upd.yml
driver/luajit/lib/: lambda.lua  trait.lua
driver/msgpack/: CMakeLists.txt  msgpack.c  upd.yml
driver/png/: crc_table.inc  png.c  png.h  reader.h
driver/sound/: CMakeLists.txt  common.h  dev.c  main.c  mix.c  stream.c  upd.yml
driver/yaml/: CMakeLists.txt  upd.yml  yaml.c
drivers/: CMakeLists.txt
drivers/graphics/: gl3.h  gl3_buf.c  gl3_dev.c  gl3_pl.h  gl3_pl_lk.c  glfw.h  glfw_dev.c  upd.yml
drivers/http/: CMakeLists.txt  http.c
drivers/luajit/: CMakeLists.txt  ctx_req.h  dev.c  main.c  std.c  std.lua  std_lua.h  std_mpk.h  std_path.h  stream.c  upd.yml
drivers/msgpack/: msgpack.c
drivers/png/: CMakeLists.txt  png.c  test.c  upd.yml  writer.h
drivers/yaml/: yaml.c
include/: libupd.h
src/: array.h  buf.h  cli.c  cli.h  common.h  config.c  config.h  driver.c  driver.h  file.c  file.h  hash.h  iso.c  iso.h  main.c  map.h  memory.h  path.h  pkg.c  pkg.h  req.c  req.h  srv.c  srv.h  test.c  test.h
src/driver/: bin.c  dir.c  factory.c  lua.c  srv_tcp.c  syncdir.c  tensor.c
src/driver/dev/: duktape.c  lua.c
src/driver/prog/: http.c  parallelism.c
src/driver/program/: http.c  parallelism.c
